[gd_scene load_steps=14 format=3 uid="uid://5cgphjedj2u2"]

[ext_resource type="Script" path="res://Scenes/Upgrades/UpgradeComponent.gd" id="1_3sjmf"]
[ext_resource type="Texture2D" uid="uid://ddji6d67k2nh4" path="res://Assets/Ships/ship_0001.png" id="2_67jip"]
[ext_resource type="Texture2D" uid="uid://bojjah5ah8ksq" path="res://Assets/Ships/ship_0009.png" id="2_ni3ws"]
[ext_resource type="Texture2D" uid="uid://yykpgr4whni3" path="res://Assets/Tiles/spritesheetexplosion.png" id="3_5j8uv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wlec4"]
size = Vector2(22, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tn3p6"]
size = Vector2(30, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3y773"]
atlas = ExtResource("3_5j8uv")
region = Rect2(0, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3rnp"]
atlas = ExtResource("3_5j8uv")
region = Rect2(36, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_32nm5"]
atlas = ExtResource("3_5j8uv")
region = Rect2(72, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_tb1iy"]
atlas = ExtResource("3_5j8uv")
region = Rect2(108, 0, 36, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_lj2sw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3y773")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3rnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32nm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tb1iy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_n6nvs"]
resource_name = "Explosion"
length = 3.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(3.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bfcmm"]
_data = {
"Explosion": SubResource("Animation_n6nvs")
}

[node name="UpgradeComponent" type="Node2D"]
script = ExtResource("1_3sjmf")

[node name="Upgrade0" type="Node2D" parent="."]

[node name="PlaneSprite" type="Sprite2D" parent="Upgrade0"]
texture_filter = 1
texture = ExtResource("2_ni3ws")

[node name="Area2D" type="Area2D" parent="Upgrade0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Upgrade0/Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_wlec4")
disabled = true

[node name="Upgrade1" type="Node2D" parent="."]
visible = false

[node name="PlaneSprite" type="Sprite2D" parent="Upgrade1"]
texture_filter = 1
texture = ExtResource("2_67jip")

[node name="Area2D" type="Area2D" parent="Upgrade1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Upgrade1/Area2D"]
shape = SubResource("RectangleShape2D_tn3p6")
disabled = true

[node name="Explosion" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_lj2sw")
frame_progress = 0.352808

[node name="ShipExplode" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bfcmm")
}
